fix(fgc-181): fixed secondary menu item delayed collapse children items

--- a/projects/fusion-ui/components/navigation-menu/v4/navigation-secondary-menu/navigation-secondary-menu.component.scss
+++ b/projects/fusion-ui/components/navigation-menu/v4/navigation-secondary-menu/navigation-secondary-menu.component.scss
@@ -145,12 +145,13 @@ $secondaryMenuItemNewTabIconSize: 16px;
                     flex-direction: column;
                     align-items: flex-start;
 
-                    transition: max-height, .45s ease-out;
+                    transition: max-height, .45s cubic-bezier(0, 1, 0, 1);
                     max-height: 0px;
                     overflow-y: hidden;
 
                     &.fu-secondary-menu-sub-items-opened{
                         max-height: calc(100vh - $secondaryMenuItemHeight);
+                        transition: max-height, 1s ease-out;
                     }
 
                     .fu-secondary-menu-item-holder{
